--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-site-verification" content="RF3J539cTpJMYsG7aRIDiSY88wF4zxZ-i1xuIHyAB7o" />
+  <link rel="canonical" href="https://social-engineering-opal.vercel.app/" />
 
 <title>How Social Engineering Works in Prize Scams</title>
 <meta name="description" content="An educational guide explaining how social engineering tactics are used in prize scams and how users can recognize and avoid them.">
@@ -204,3 +206,4 @@ ul{padding-left:20px}
 
 </body>
 </html>
+
